# carrot

./: Cargo.toml  LICENSE
src/: ast.rs  grammar.lalrpop  lib.rs  main.rs  smoke_test.rs  tast.rs
src/typer/: builtin.rs  constraint.rs  env.rs  infer.rs  mod.rs  subst.rs  toplevel.rs  tx.rs  unification.rs  util.rs
tests/: mod.rs
tests/test_data/: 001.src  001.src.ast  001.src.tast  002.src  002.src.ast  002.src.tast  003.src  003.src.ast  003.src.tast  004.src  004.src.ast  004.src.tast  005.src  005.src.ast  005.src.tast  006.src  006.src.ast  006.src.tast  007.src  007.src.ast  007.src.tast  008.src  008.src.ast  008.src.tast  009.src  009.src.ast  009.src.tast  010.src  010.src.ast  010.src.tast
