[package]
name = "carrot"
version = "0.1.0"
edition = "2021"


[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
ena = "0.14.3"
im = "15.1.0"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }

[dev-dependencies]
expect-test = "1.5.0"
